...
    var passVisible by remember { mutableStateOf(false) }
    val visualPass = if (passVisible) VisualTransformation.None else PasswordVisualTransformation()

    OutlinedTextField(
        value = value,
        onValueChange = onValueChange,
        label = { Text(text = "Password") },
        visualTransformation = visualPass,
        trailingIcon = {
            IconToggleButton(
                checked = passVisible,
                onCheckedChange = { passVisible = it },
                modifier = Modifier.testTag(ICON_REVEAL_TEXT_TEST_TAG)
...
